# portfolio

./: .gitignore  temp
entropy-insight-titanic/: README.md  main.py  precomputed_loss.csv  pyproject.toml
iris-viz/: README.md  app.py  main.py  pyproject.toml
playground-series-s6e1/: .gitignore  README.md  app.py  eda_correlations.json  feature_importance.csv  generate_metrics.py  model_metrics.json  pyproject.toml
review/: REVIEW_STANDARD.md
sales-forecast-evaluator/: README.md  app.py  pyproject.toml
survey-analysis-automation/: README.md  analysis.ipynb  config.yaml  init_project.py  preprocess.py  pyproject.toml
survey-analysis-automation/data/processed/: cleaned_survey_data.parquet
survey-analysis-automation/data/raw/: survey_sample.csv
