[project]
name = "entropy-insight-titanic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "altair<5",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy<2",
    "pandas<3",
    "protobuf<5",
    "pyarrow<15",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.19.0",
]
