[project]
name = "sales-forecast-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pvlib>=0.15.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.19.0",
]

[tool.uv.workspace]
members = [
    "entropy-insight-titanic",
]
